# swagger_under_nginx

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: access_control.py  main.py  service.py
control/: main.py
